--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,18 @@
 a-scene {
   background: black;
 }
+
+#defaultCanvas0 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+p {
+  position: absolute;
+  bottom: 80px;
+  color: white;
+  &:last-child {
+    bottom: 40px;
+  }
+}
