p5js canvas + tick frequency + cleanup
adjusted size and moved p5js canvas + trying to slow down the frequency
of tick to XXXms vs 90fps + lotta tiding

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,10 +5,11 @@ a-scene {
 #defaultCanvas0 {
   position: absolute;
   bottom: 0;
-  right: 0;
+  left: 0;
 }
 
 p {
+  display: none;
   position: absolute;
   bottom: 80px;
   color: white;
