cue points set + glitch button + play button
i set the cue points through the track. one left that i might not do +
added glitch remix button + changed out play button + cleanup

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,3 +17,15 @@ p {
     bottom: 40px;
   }
 }
+
+.glitchRemix {
+  z-index: 2;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  img {
+    background-color: white;
+    border: 1px solid white;
+  }
+}
