--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,6 +18,17 @@ p {
   }
 }
 
+#playBtn {
+  position: absolute;
+  bottom: 20px;
+  left: 22px;
+  padding: 2px 10px;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 7px;
+  background: white;
+}
+
 .glitchRemix {
   z-index: 2;
   position: absolute;
