--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,44 +1,123 @@
+body {
+	background: black;
+
+	&.unfade {
+		.glitchRemix {
+			opacity: 1;
+			transition: opacity 1s;
+    }
+    
+		#playBtn {
+			opacity: 1;
+			transition: opacity 1s;
+    }
+    
+		.a-enter-vr {
+			opacity: 1;
+			transition: opacity 1s;
+		}
+	}
+}
+
 a-scene {
-  background: black;
+	opacity: 0;
+	background: black;
+	transition: opacity 0.6s;
+
+	&.loaded {
+		opacity: 1;
+		transition: opacity 1s;
+	}
 }
 
 #defaultCanvas0 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
+#loadingMsg {
+	z-index: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: white;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.6);
+	// opacity: 1;
+	transition: all 1s;
 
-p {
-  display: none;
-  position: absolute;
-  bottom: 80px;
-  color: white;
-  &:last-child {
-    bottom: 40px;
-  }
-}
+	&.fadeOut {
+		background-color: rgba(0, 0, 0, 0);
+		transition: background-color 1s;
+		* {
+			opacity: 0;
+			transition: opacity 1s;
+		}
+	}
 
-#playBtn {
-  position: absolute;
-  bottom: 20px;
-  left: 22px;
-  padding: 2px 10px;
-  font-size: 20px;
-  font-weight: bold;
-  border-radius: 7px;
-  background: white;
-  outline: none;
+	* {
+		width: 60%;
+		opacity: 1;
+		transition: opacity 1s;
+	}
+
+	h1 {
+		margin: 0;
+	}
+
+	h2 {
+		font-weight: 400;
+	}
+
+	p {
+		margin: 10px auto 5px;
+		font-size: 18px;
+		font-weight: 300;
+		line-height: 1.7;
+	}
 }
 
 .glitchRemix {
-  z-index: 2;
-  position: absolute;
-  top: 20px;
-  right: 20px;
+	opacity: 0;
+	z-index: 2;
+	position: absolute;
+	top: 20px;
+	right: 20px;
 
-  img {
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 5px;
-  }
+	img {
+		background-color: white;
+		border: 1px solid white;
+		border-radius: 5px;
+	}
+}
+
+#playBtn {
+	opacity: 0;
+	z-index: 2;
+	position: absolute;
+	bottom: 20px;
+	left: 22px;
+	padding: 2px 10px;
+	font-size: 20px;
+	font-weight: bold;
+	border-radius: 7px;
+	background: white;
+	outline: none;
+}
+
+.a-enter-vr {
+	opacity: 0;
+	font-family: sans-serif, monospace;
+	font-size: 13px;
+	width: 100%;
+	font-weight: 200;
+	line-height: 16px;
+	position: absolute;
+	right: 20px;
+	bottom: 20px;
 }
