loading screen updates
adjusted to account for mobile browsers calculation of 100vh + added cta
+ edited copy

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,13 +5,13 @@ body {
 		.glitchRemix {
 			opacity: 1;
 			transition: opacity 1s;
-    }
-    
+		}
+
 		#playBtn {
 			opacity: 1;
 			transition: opacity 1s;
-    }
-    
+		}
+
 		.a-enter-vr {
 			opacity: 1;
 			transition: opacity 1s;
@@ -35,6 +35,7 @@ a-scene {
 	bottom: 0;
 	left: 0;
 }
+
 #loadingMsg {
 	z-index: 1;
 	display: flex;
@@ -61,13 +62,14 @@ a-scene {
 	}
 
 	* {
-		width: 60%;
+		width: 57%;
 		opacity: 1;
 		transition: opacity 1s;
 	}
 
 	h1 {
-		margin: 0;
+    margin: 0;
+    padding-bottom: 20px;
 	}
 
 	h2 {
@@ -77,8 +79,38 @@ a-scene {
 	p {
 		margin: 10px auto 5px;
 		font-size: 18px;
-		font-weight: 300;
+    font-weight: 300;
+    letter-spacing: 1.5px;
 		line-height: 1.7;
+	}
+
+	button {
+    width: 150px;
+		margin: 30px auto 0;
+		padding: 10px 20px;
+		font-size: 16px;
+		color: white;
+		letter-spacing: 1.5px;
+		font-weight: 300;
+		background-color: transparent;
+		border: 1px solid white;
+		transition: all 0.4s;
+
+		&:hover {
+			color: transparent;
+      background-color: white;
+      cursor: pointer;
+		}
+
+		&.transp-bg {
+			color: white;
+			background-color: transparent;
+			transition: all 0.4s;
+			&:hover {
+				color: black;
+				background-color: white;
+			}
+		}
 	}
 }
 
