--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,10 +62,17 @@ a-scene {
 	}
 
 	* {
-		width: 57%;
+    width: 89%;
+    max-width: 600px;
 		opacity: 1;
 		transition: opacity 1s;
-	}
+  }
+  
+  @media (min-width: 1025px) {
+    * {
+      width: 57%;
+    }
+  }
 
 	h1 {
     margin: 0;
