--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,7 +69,7 @@ a-scene {
 		position: relative;
 		width: 100%;
 		max-width: 600px;
-		height: 290px;
+    // border: 1px solid deepskyblue;
 	}
 
 	@media (min-width: 1025px) {
@@ -99,7 +99,7 @@ a-scene {
 	}
 
 	button {
-		position: absolute;
+		position: static;
 		bottom: 0;
 		width: 150px;
 		height: 42px;
@@ -116,6 +116,7 @@ a-scene {
 		transition: opacity 1s;
 
 		&.enter {
+      position: absolute;
 			opacity: 0;
 			border: 1px solid white;
 		}
