--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -99,13 +99,16 @@ a-scene {
 	}
 
 	button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 		position: static;
 		bottom: 0;
 		width: 150px;
 		height: 42px;
-		margin: 20px auto 0;
-		padding: 10px 20px 12px;
-		font-size: 16px;
+		margin: 25px auto 0;
+    font-size: 16px;
+    padding-bottom: 3px;
 		color: white;
 		letter-spacing: 1.5px;
 		font-weight: 300;
